# evaltrust

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  adapters.md  architecture.md  checks.md  configuration.md  design.md  input-formats.md  integrations.md  predictive-rerun.md
docs/superpowers/specs/: 2026-07-06-evallab-audit-design.md
examples/: README.md  basic.csv  basic.jsonl  borderline.json  clean_win.json  deepeval_claude.json  deepeval_gpt4.json  multi_metric.csv
src/evallab/: cli.py
src/evallab/audit/: statistical.py
src/evallab/core/: ingest.py  pairing.py
src/evallab/report/: terminal.py
src/evaltrust/: __init__.py  api.py  cli.py  config.py  diff.py  versions.py
src/evaltrust/adapters/: common.py  deepeval.py  generic.py  inspect_ai.py  langsmith.py  line_registry.py  lm_eval.py  openai_evals.py  openevals.py  promptfoo.py  ragas.py  registry.py
src/evaltrust/audit/: allpairs.py  bayesian.py  benchmark_health.py  judge_calibration.py  judge_reliability.py  preference.py  rank_stability.py  repeatability.py  runner.py  single.py  slice.py  statistical.py  suite.py  verdict.py
src/evaltrust/core/: ingest.py  pairing.py  schema.py
src/evaltrust/report/: html.py  terminal.py
src/evaltrust/stats/: agreement.py  bayesian.py  effect.py  multiplicity.py  paired.py  power.py  predictive_rerun.py  rank_stability.py  resampling.py
tests/: test_adapters.py  test_agreement.py  test_api.py  test_bayesian_audit.py  test_bayesian_stats.py  test_benchmark_health.py  test_citation.py  test_cli.py  test_config.py  test_diff.py  test_effect.py  test_ingest.py  test_ingest_common.py  test_ingest_streaming.py  test_integration.py  test_judge_calibration.py  test_judge_reliability.py  test_line_adapters.py  test_multiplicity.py  test_paired_stats.py  test_pairing.py  test_power.py  test_predictive_rerun.py  test_preference.py  test_rank_stability_audit.py  test_rank_stability_stats.py  test_repeatability.py  test_report_html.py  test_resampling.py  test_robustness.py  test_runner.py  test_schema.py  test_single.py  test_slice.py  test_statistical.py  test_suite.py  test_suite_ingest.py  test_terminal.py  test_verdict.py  test_versions.py
tests/fixtures/: openai_evals_log.jsonl  results_2026-07-09T22-44-17.123456.json  samples_arc_challenge_2026-07-09T22-44-17.123456.jsonl
