[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evallab"
version = "0.1.0"
description = "An auditor for LLM evaluations — tells you whether you can trust your eval results."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EvalLab" }]
keywords = ["llm", "evaluation", "audit", "statistics", "benchmark"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# statsmodels is used only in the test suite, to validate EvalLab's statistics
# against an independent reference implementation. It is not a runtime dependency.
dev = ["pytest>=8.0", "statsmodels>=0.14"]

[project.scripts]
evallab = "evallab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evallab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
