[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evaltrust"
version = "0.6.0"
description = "An auditor for LLM evaluations — tells you whether you can trust your eval results."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EvalTrust contributors" }]
keywords = ["llm", "evaluation", "audit", "statistics", "benchmark", "eval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "rich>=13.0",
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# statsmodels is used only in the test suite, to validate EvalTrust's statistics
# against an independent reference implementation. It is not a runtime dependency.
dev = ["pytest>=8.0", "statsmodels>=0.14", "cffconvert>=2.0"]

[project.urls]
Homepage = "https://github.com/k-dickinson/evaltrust"
Repository = "https://github.com/k-dickinson/evaltrust"
Issues = "https://github.com/k-dickinson/evaltrust/issues"
Changelog = "https://github.com/k-dickinson/evaltrust/blob/main/CHANGELOG.md"

[project.scripts]
evaltrust = "evaltrust.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evaltrust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
